objects/Mobile_Event__c.object
<CustomObject>
    <fields>
        <fullName>API_Integration__c</fullName>
        <label>API Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A2Z</fullName>
                </value>
                <value>
                    <fullName>CompuSystems</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>eTouches</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_URL_Link__c</fullName>
        <label>App URL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contract_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Mobile_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Folder_Name__c</fullName>
        <label>Customer Folder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataCentre__c</fullName>
        <label>DataCentre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USDC</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Account_Type_Dropdown__c</fullName>
        <label>Developer Account Type Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont_Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Links__c</fullName>
        <label>Event Links</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_Event_Launch_Date__c</fullName>
        <label>Ideal Event Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Submitted_Date_Android__c</fullName>
        <label>Last Submitted Date Android</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Submitted_Date_iOS__c</fullName>
        <label>Last Submitted Date iOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_App__c</fullName>
        <label>Mobile App</label>
        <referenceTo>Mobile_Card__c</referenceTo>
        <relationshipName>Mobile_Events_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Mobile_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personalized_Schedules__c</fullName>
        <label>Personalized Schedules?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platforms__c</fullName>
        <label>Platforms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPhone</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>Blackberry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Mobile_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Owner__c</fullName>
        <label>Release Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AttendeeHub</fullName>
                </value>
                <value>
                    <fullName>Self-publishing</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rush_Request_Date__c</fullName>
        <label>Rush Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rush_Request_Disposition__c</fullName>
        <label>Rush Request Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Need More Info</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rush_Request_Expiration_Date__c</fullName>
        <label>Rush Request Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rush_Request_Info_Required__c</fullName>
        <label>Rush Request Info Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rush_Request_Notes__c</fullName>
        <label>Rush Request Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Assignment</fullName>
                </value>
                <value>
                    <fullName>Pending Kick-Off</fullName>
                </value>
                <value>
                    <fullName>Kick-Off</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Scope Definition</fullName>
                </value>
                <value>
                    <fullName>Graphics &amp; Data</fullName>
                </value>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>Preview &amp; Iterate</fullName>
                </value>
                <value>
                    <fullName>Client review &amp; Iterate</fullName>
                </value>
                <value>
                    <fullName>Pending App Store</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Released</fullName>
                </value>
                <value>
                    <fullName>Event in Progress</fullName>
                </value>
                <value>
                    <fullName>Post-Event Support</fullName>
                </value>
                <value>
                    <fullName>Pending Closeout</fullName>
                </value>
                <value>
                    <fullName>Closed Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TTS_Case__c</fullName>
        <label>TTS Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TTS_Event__c</fullName>
        <label>TTS Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TTS_Mobile_Event__c</fullName>
        <formula>TTS_Case__c  +  TTS_Event__c  +  TTS_Task__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TTS (Mobile Event)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TTS_Task__c</fullName>
        <label>TTS Task</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Event__c</fullName>
        <label>Type of Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alumni Events</fullName>
                </value>
                <value>
                    <fullName>Banquet</fullName>
                </value>
                <value>
                    <fullName>Board Meeting</fullName>
                </value>
                <value>
                    <fullName>Breakfast/Lunch/Dinners</fullName>
                </value>
                <value>
                    <fullName>Community Event</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Continuing Education</fullName>
                </value>
                <value>
                    <fullName>Corporate Meeting</fullName>
                </value>
                <value>
                    <fullName>Donations</fullName>
                </value>
                <value>
                    <fullName>Film Festival</fullName>
                </value>
                <value>
                    <fullName>Food and Wine Event</fullName>
                </value>
                <value>
                    <fullName>Fundraiser/Auction</fullName>
                </value>
                <value>
                    <fullName>Galas</fullName>
                </value>
                <value>
                    <fullName>Golf Event</fullName>
                </value>
                <value>
                    <fullName>Happy Hour/Social Event/Networking</fullName>
                </value>
                <value>
                    <fullName>Incentive Travel Program</fullName>
                </value>
                <value>
                    <fullName>Internal Meetings</fullName>
                </value>
                <value>
                    <fullName>Literary/Film Festival</fullName>
                </value>
                <value>
                    <fullName>Membership Renewal Campaign</fullName>
                </value>
                <value>
                    <fullName>Music Festival</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Festival</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Sporting Event</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>User Conference Group</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>App Level</label>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>